--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="preload" as="image" href="/Xsuite-Final.png">
+    <link rel="preload" as="image" href="/Xsuite-Final.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X Digital Suite</title>
   </head>
