--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-    <script src="https://files.bpcontent.cloud/2024/10/22/08/20241022084406-NLXWC53G.js"></script>
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js-na1.hs-scripts.com/47858668.js"
+    ></script>
   </body>
 </html>
