--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8" />
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-708625819">
-    </script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-708625819"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'AW-708625819');
-    </script>
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
+      gtag("config", "AW-708625819");
+    </script>
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preload" as="image" href="/Xsuite-Final.webp" />
@@ -32,7 +35,6 @@
 
       gtag("config", "AW-708625819");
     </script>
-
   </head>
   <body>
     <div id="root"></div>
@@ -43,8 +45,7 @@
       id="hs-script-loader"
       async
       defer
-      src="//js-na1.hs-scripts.com/47858668.js"
+      src="//js.hs-scripts.com/47858668.js"
     ></script>
-
   </body>
 </html>
