--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-708625819"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-708625819"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -11,17 +14,36 @@
       gtag("js", new Date());
       gtag("config", "AW-708625819");
     </script>
-    
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preload" as="image" href="/Xsuite-Final.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X Digital Suite</title>
 
     <!-- Only include HubSpot script once -->
-    <script type="text/javascript" id="hs-script-loader" src="//js.hs-scripts.com/47858668.js" async></script>
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      src="//js.hs-scripts.com/47858668.js"
+      async
+    ></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-RM3KH60BFM"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-RM3KH60BFM");
+    </script>
   </body>
 </html>
