--- a/index.html
+++ b/index.html
@@ -2,48 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=AW-708625819"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "AW-708625819");
-    </script>
-
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="preload" as="image" href="/Xsuite-Final.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>X Digital Suite</title>
-
-    <!-- Only include HubSpot script once -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      src="//js.hs-scripts.com/47858668.js"
-      async
-    ></script>
-  </head>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KFVRJMK3');</script>
+   <link rel="icon" href="XSD.webp">
   <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KFVRJMK3"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-RM3KH60BFM"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-RM3KH60BFM");
-    </script>
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/47858668.js"></script>
   </body>
 </html>
